# meta_hackathon

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  FIXES_APPLIED.md  HF_SPACE_README.md  LICENSE  PROVENANCE.md  README.md  README_UI_TESTING.md  SETUP_UI_GUIDE.md  __init__.py  analyze_difficulty.py  blog.md  blog_post.md  cicd_repair_rl_training (4).ipynb  cicd_repair_rl_training_unsloth.ipynb  client.py  docker-compose.yml  eval_runner.py  hackathon guide.txt  hackathon_guide_2.docx  inference.py  models.py  openenv.yaml  pyproject.toml  reset_sqlite_db.py  run_remote_episode.py  test_environment.py
.claude/: settings.local.json
.github/agents/: openenv-hf-hackathon.agent.md
agent/: Dockerfile  __init__.py  actions.py  api_client.py  api_tool_schemas.py  config.py  fallback.py  http_environment.py  model_client.py  prompts.py  runner.py  tool_schemas.py  trajectory_logging.py  ws_client.py
cicd/: __init__.py  drift_injector.py  fault_injector.py  fault_types.py  fix_applier.py  github_actions_simulator.py  observation_builder.py  pipeline_runner.py  procedural_generator.py  simulated_fault_injector.py  simulated_fix_applier.py  simulated_runner.py  subprocess_runner.py  terraform_simulator.py
db/: database.py  faults.py
openenv_meta_hackathon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: ANALYSIS.md  reward_over_steps_2026-04-07.csv  task_metrics_2026-04-07.json
sample-app/: Dockerfile  docker-compose.yml  pytest.ini
server/: __init__.py  adversarial_designer.py  adversarial_judge.py  agent_memory.db  agent_memory.py  app.py  cicd_api.py  curriculum.py  environment.py  failure_patterns.py  graders.py  meta_hackathon_environment.py  requirements.txt  rubric_judge.py  scenarios.py
tests/: test_environment.py
(+20 files in other folders)
